Merger test and gender datasets

--- a/interactive_dash.ipynb
+++ b/interactive_dash.ipynb
@@ -81,7 +81,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Merge datasets\n",
+    "test_with_gender_df = pd.merge(test_df, gender_df, on='PassengerId', how='inner')\n"
+   ]
   }
  ],
  "metadata": {
