Initialize dash app

--- a/interactive_dash.ipynb
+++ b/interactive_dash.ipynb
@@ -287,6 +287,16 @@
     "from dash import Dash, dcc, html, Input, Output\n",
     "import plotly.express as px"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initalize Dash app\n",
+    "app  = Dash(__name__)\n"
+   ]
   }
  ],
  "metadata": {
