App Layout implemented

--- a/interactive_dash.ipynb
+++ b/interactive_dash.ipynb
@@ -290,12 +290,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Initalize Dash app\n",
-    "app  = Dash(__name__)\n"
+    "app  = Dash(__name__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Layout for the dashboard\n",
+    "app.layout = html.Div([\n",
+    "    html.H1('Titanic dashboard', style={'textaAlign': 'center'}),\n",
+    "    dcc.Dropdown(\n",
+    "        id='dataset-dropdown',\n",
+    "        options=[\n",
+    "            {'label': 'Train Dataset', 'value': 'train'},\n",
+    "            {'label': 'Test Dataset', 'value': 'test'}\n",
+    "        ],\n",
+    "        value='train',\n",
+    "        placeholder='Select Datadset'\n",
+    "    ),\n",
+    "    dcc.Graph(id='age-distribution'),\n",
+    "    dcc.Graph(id='fare-distribution')\n",
+    "])"
    ]
   }
  ],
