--- a/interactive_dash.ipynb
+++ b/interactive_dash.ipynb
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,6 +319,20 @@
     "    dcc.Graph(id='age-distribution'),\n",
     "    dcc.Graph(id='fare-distribution')\n",
     "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Callbacks\n",
+    "@app.callback(\n",
+    "    Output('age-distribution', 'figure'),\n",
+    "    Input('dataset-dropdown', 'value')\n",
+    ")\n",
+    "def update_age_distribution(selected_dataset):"
    ]
   }
  ],
