Implemented update age distribution method

--- a/interactive_dash.ipynb
+++ b/interactive_dash.ipynb
@@ -332,7 +332,10 @@
     "    Output('age-distribution', 'figure'),\n",
     "    Input('dataset-dropdown', 'value')\n",
     ")\n",
-    "def update_age_distribution(selected_dataset):"
+    "def update_age_distribution(selected_dataset):\n",
+    "    data = train_df if selected_dataset == 'train' else test_df\n",
+    "    fig = px.histogram(data, x='Age', title='Age Distribution')\n",
+    "    return fig"
    ]
   }
  ],
