--- a/interactive_dash.ipynb
+++ b/interactive_dash.ipynb
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,6 +336,19 @@
     "    data = train_df if selected_dataset == 'train' else test_df\n",
     "    fig = px.histogram(data, x='Age', title='Age Distribution')\n",
     "    return fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Callbacks\n",
+    "@app.callback(\n",
+    "    Output('fare-distribution', 'figure'),\n",
+    "    Input('dataset-dropdown', 'value')\n",
+    ")\n"
    ]
   }
  ],
