--- a/interactive_dash.ipynb
+++ b/interactive_dash.ipynb
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +348,115 @@
     "@app.callback(\n",
     "    Output('fare-distribution', 'figure'),\n",
     "    Input('dataset-dropdown', 'value')\n",
-    ")\n"
+    ")\n",
+    "def update_fare_distributions(selected_dataset):\n",
+    "    data = train_df if selected_dataset == 'train' else test_df\n",
+    "    fig = px.histogram(data, x='Fare', title='Fare Distribution')\n",
+    "    return fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"650\"\n",
+       "            src=\"http://127.0.0.1:8050/\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7f88cce9d250>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[2025-01-12 18:45:06,679] ERROR in app: Exception on /_dash-update-component [POST]\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/jparep/miniconda3/envs/dash-env/lib/python3.11/site-packages/flask/app.py\", line 1511, in wsgi_app\n",
+      "    response = self.full_dispatch_request()\n",
+      "               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/jparep/miniconda3/envs/dash-env/lib/python3.11/site-packages/flask/app.py\", line 919, in full_dispatch_request\n",
+      "    rv = self.handle_user_exception(e)\n",
+      "         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/jparep/miniconda3/envs/dash-env/lib/python3.11/site-packages/flask/app.py\", line 917, in full_dispatch_request\n",
+      "    rv = self.dispatch_request()\n",
+      "         ^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/jparep/miniconda3/envs/dash-env/lib/python3.11/site-packages/flask/app.py\", line 902, in dispatch_request\n",
+      "    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)  # type: ignore[no-any-return]\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/jparep/miniconda3/envs/dash-env/lib/python3.11/site-packages/dash/dash.py\", line 1376, in dispatch\n",
+      "    ctx.run(\n",
+      "  File \"/home/jparep/miniconda3/envs/dash-env/lib/python3.11/site-packages/dash/_callback.py\", line 507, in add_context\n",
+      "    raise err\n",
+      "  File \"/home/jparep/miniconda3/envs/dash-env/lib/python3.11/site-packages/dash/_callback.py\", line 496, in add_context\n",
+      "    output_value = _invoke_callback(func, *func_args, **func_kwargs)\n",
+      "                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/jparep/miniconda3/envs/dash-env/lib/python3.11/site-packages/dash/_callback.py\", line 43, in _invoke_callback\n",
+      "    return func(*args, **kwargs)  # %% callback invoked %%\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/tmp/ipykernel_3770/2689113100.py\", line 8, in update_age_distribution\n",
+      "    fig = px.histogram(data, x='Age', title='Age Distribution')\n",
+      "          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/jparep/miniconda3/envs/dash-env/lib/python3.11/site-packages/plotly/express/_chart_types.py\", line 480, in histogram\n",
+      "    return make_figure(\n",
+      "           ^^^^^^^^^^^^\n",
+      "  File \"/home/jparep/miniconda3/envs/dash-env/lib/python3.11/site-packages/plotly/express/_core.py\", line 2115, in make_figure\n",
+      "    apply_default_cascade(args)\n",
+      "  File \"/home/jparep/miniconda3/envs/dash-env/lib/python3.11/site-packages/plotly/express/_core.py\", line 993, in apply_default_cascade\n",
+      "    args[\"pattern_shape_sequence\"] = [\n",
+      "                                     ^\n",
+      "  File \"/home/jparep/miniconda3/envs/dash-env/lib/python3.11/site-packages/plotly/express/_core.py\", line 994, in <listcomp>\n",
+      "    bar.marker.pattern.shape for bar in args[\"template\"].data.bar\n",
+      "    ^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/jparep/miniconda3/envs/dash-env/lib/python3.11/site-packages/plotly/graph_objs/bar/marker/_pattern.py\", line 252, in shape\n",
+      "    return self[\"shape\"]\n",
+      "           ~~~~^^^^^^^^^\n",
+      "  File \"/home/jparep/miniconda3/envs/dash-env/lib/python3.11/site-packages/plotly/basedatatypes.py\", line 4742, in __getitem__\n",
+      "    elif self._props is not None and prop in self._props:\n",
+      "         ^^^^^^^^^^^\n",
+      "  File \"/home/jparep/miniconda3/envs/dash-env/lib/python3.11/site-packages/plotly/basedatatypes.py\", line 4437, in _props\n",
+      "    return self.parent._get_child_props(self)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/jparep/miniconda3/envs/dash-env/lib/python3.11/site-packages/plotly/basedatatypes.py\", line 4451, in _get_child_props\n",
+      "    if self._props is None:\n",
+      "       ^^^^^^^^^^^\n",
+      "  File \"/home/jparep/miniconda3/envs/dash-env/lib/python3.11/site-packages/plotly/basedatatypes.py\", line 4437, in _props\n",
+      "    return self.parent._get_child_props(self)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/jparep/miniconda3/envs/dash-env/lib/python3.11/site-packages/plotly/basedatatypes.py\", line 4451, in _get_child_props\n",
+      "    if self._props is None:\n",
+      "       ^^^^^^^^^^^\n",
+      "  File \"/home/jparep/miniconda3/envs/dash-env/lib/python3.11/site-packages/plotly/basedatatypes.py\", line 4437, in _props\n",
+      "    return self.parent._get_child_props(self)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/jparep/miniconda3/envs/dash-env/lib/python3.11/site-packages/plotly/basedatatypes.py\", line 4471, in _get_child_props\n",
+      "    child_ind = BaseFigure._index_is(children, child)\n",
+      "                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/jparep/miniconda3/envs/dash-env/lib/python3.11/site-packages/plotly/basedatatypes.py\", line 3965, in _index_is\n",
+      "    raise ValueError(\"Invalid value\")\n",
+      "ValueError: Invalid value\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Run the app\n",
+    "if __name__ == '__main__':\n",
+    "    app.run_server(debug=False)"
    ]
   }
  ],
