Include all EDA

--- a/interactive_dash.ipynb
+++ b/interactive_dash.ipynb
@@ -283,7 +283,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gender_df.describe()"
+    "gender_df.describe()\n",
+    "gender_df.describe(include='all')"
    ]
   },
   {
