check first 5 rows of gender file

--- a/interactive_dash.ipynb
+++ b/interactive_dash.ipynb
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,8 @@
     }
    ],
    "source": [
-    "gender_df.isnull().sum()"
+    "gender_df.isnull().sum()\n",
+    "gender_df.head()"
    ]
   },
   {
